# drift

./: .gitignore  LICENSE  README.md  requirements.txt  setup.sh
data/precomputed/: uwb_rmse_per_sequence.csv
data/precomputed/fig2_height/: eskf.npz  mamba_dr.npz  mamba_eskf.npz
data/precomputed/gnss/figures/: summary_both_subsets.json
reproduce/: fig2_height_tracking.py  fig3_improvement.py  fig4_regimes.py  fig_gnss_per_seq.py  table1_uwb_rmse.py
research/dr_conclusions/artifacts/: guideline_units_alltdoa2.csv  guideline_units_alltdoa2_v47.csv
research/dr_conclusions/figures_guideline_v5_paper/: guideline_uwb_snippet.tex
research/dr_conclusions/scripts/: extract_guideline_all_tdoa2.py  fig_drift_guideline_v5_uwb.py
scripts/common/: __init__.py  cpp_loader.py  slurm_paths.py  so3.py
scripts/drekf_cpp/: CMakeLists.txt
scripts/drekf_cpp/include/dr_ekf/: dr_ekf_cdc.h  dr_ekf_tac.h  dr_mmse_cdc.h  dr_mmse_tac.h  dynamics.h  ekf.h  fw_oracle.h  kalman_utils.h  types.h
scripts/drekf_cpp/src/: bindings.cpp  dr_ekf_cdc.cpp  dr_ekf_tac.cpp  dr_mmse_cdc.cpp  dr_mmse_tac.cpp  dynamics.cpp  ekf.cpp  fw_oracle.cpp  kalman_utils.cpp
scripts/drekf_cpp/tests/: test_dr_mmse_tac.py  test_equivalence.py
scripts/estimation/: build_uwb_table.py  classical_adaptive.py  dr_eskf_class_tac.py  eskf_class.py  eval_8way.py  eval_calibration.py  main.py  main_adaptive.py  main_muse_theta.py  make_v47_paper_artifacts.py  plot_8way.py  theta_muse_adapter.py  theta_muse_model.py  theta_sweep_worker.py
scripts/estimation/ronin/: SOURCE.txt
scripts/gnss_imu/: __init__.py
scripts/gnss_imu/adaptive/: __init__.py  kfgins_features.py  theta_muse_adapter_kfgins.py  theta_muse_model_gnss.py
scripts/gnss_imu/cpp_kfgins/: CMakeLists.txt  kfgins_pybind.cpp
scripts/gnss_imu/runners/: dr_kfgins.py  main_kfgins.py  plot_i2nav_drift_pub.py  plot_phase11_v3_a.py  sweep_dr_theta.py
